# TinyC

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TinyC.g4  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: create-release.yml  dev-tests.yml  pre-master-tests.yml  test.yml
config/presets/: CMakePresets.py  generate.py  presets.py
examples/ackermann/: Ackermann.c
examples/arrays/: Arrays.c
examples/flow_control/: FlowControl.c
examples/loops/: Loops.c
examples/math/: Math.c
examples/pointers/: Pointers.c
examples/structs/: Structs.c
examples/sum/: Sum.c
grammar/: TinyC.g4
src/tcc/: Main.cpp
src/tcc/app/: AppMain.cpp  AppMain.h
src/tcc/asg/: AsgNode.cpp  AsgNode.h  AsgVisitor.h
src/tcc/ast/: AstVisitor.cpp  AstVisitor.h
src/tcc/ir/: IrEmitter.cpp  IrEmitter.h
src/tcc/log/: Logging.h
src/tcc/os/: OsInit.cpp  OsInit.h  OsTerminate.cpp  OsTerminate.h  Platform.h
src/tcc/os/linux/: LinuxInit.cpp  LinuxInit.h  LinuxMain.cpp
src/tcc/os/windows/: WindowsInit.cpp  WindowsInit.h  WindowsMain.cpp  WindowsMinidump.cpp  WindowsMinidump.h
src/tcc/pch/: Pch.h
src/tcc/pipeline/: Pipeline.cpp  Pipeline.h  PipelineStage.h
src/tcc/pipeline/input/: FileReader.cpp  FileReader.h
src/tcc/pipeline/output/: FileWriter.cpp  FileWriter.h  TerminalWriter.cpp  TerminalWriter.h
src/tcc/symbols/: Function.h  FunctionLib.cpp  FunctionLib.h  SymbolResolver.cpp  SymbolResolver.h  Type.cpp  Type.h  TypeLib.cpp  TypeLib.h  TypeResolver.cpp  TypeResolver.h
src/tcc/utils/: Defs.h
src/tcc/version/: Version.h
